--- a/src/styles/leftpannel.module.css
+++ b/src/styles/leftpannel.module.css
@@ -1,16 +1,40 @@
 .left {
-    background-color: cornflowerblue;
+    background-color: white;
     border-radius: 0.5em;
+    box-shadow: 2px 2px 10px #cccccc;
     padding: 0;
     margin: 0;
+    overflow-y: scroll;
+    display: block;
 }
 
+.hide{
+  display: none;
+}
+
+.header {
+  background: #7a06a4;
+  margin: 0;
+  padding: 1rem;
+  color: white;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  letter-spacing: 0.15em;
+  font-weight: 100;
+  font-size: 1.2rem;
+   position: sticky;
+  top: 0;
+  left: 0;
+  align-items: center;
+}
 .records-list{
     padding: 0;
     margin: 0;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 1em;
+padding: 0.5em;
 }
 
 .list-item{
@@ -18,10 +42,29 @@ width: 30ch;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding: 0.3em;
+  padding: 0.5em 0.3em;
+  border-radius: 0.5em;
+  font-weight: bold;
 }
 
 .list-item:hover{
     cursor: pointer;
-    background-color: rgba(0, 140, 255, 0.253);
+    background-color: #7a06a457;
 }
+
+#nav-icon1{
+  width: 60px;
+  height: 45px;
+  position: relative;
+  margin: 50px auto;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
