--- a/src/styles/mainpannel.module.css
+++ b/src/styles/mainpannel.module.css
@@ -1,4 +1,94 @@
-.main{
-    background-color: cornflowerblue;
-    border-radius: 0.5em;
+.main {
+  background-color: white;
+  border-radius: 0.5em;
+  box-shadow: 2px 2px 10px #cccccc;
+  padding: 0;
+  margin: 0;
+  min-width: 300px;
+  max-width: 426px;
+  overflow-y: scroll;
+  position: relative;
 }
+
+.header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  background: #7a06a4;
+  padding: 1rem;
+  display: flex;
+  justify-content: start;
+  gap: 1rem ;
+}
+
+.content {
+    padding: 0.5rem;
+    line-height: 1.5rem;
+    letter-spacing: 0.1em;
+}
+
+.button {
+  padding: 0.3rem 0.5rem;
+  color: #242424;
+  letter-spacing: 0.1em;
+  font-weight: 600;
+  border-radius: 100vw;
+  font-size:x-small;
+  width: 15ch;
+  border: none;
+  background-color: white;
+  cursor: pointer;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.37);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  padding: 1rem;
+  border-radius: 0.5em;
+  background-color: white;
+  box-shadow: 2px 2px 10px #cccccc;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  width: 15em;
+  font-family:Inter, Avenir, Helvetica, Arial, sans-serif;
+}
+
+.modal-header {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.modal-footer{
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-btn{
+  border: none;
+  background-color: #7a06a4;
+  color: white;
+  padding: 0.5em;
+  border-radius: 0.5em;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.highlight{
+  background: rgba(206, 206, 5, 0.904);
+  color:#7a06a4;
+  font-weight: 600;
+}
+
+
