--- a/src/styles/rightpannel.module.css
+++ b/src/styles/rightpannel.module.css
@@ -1,4 +1,51 @@
 .right{
-    background-color: cornflowerblue;
+    background-color: white;
     border-radius: 0.5em;
+    box-shadow: 2px 2px 10px #cccccc;
+    padding: 0;
+    margin: 0;
+    overflow-y: scroll;
+    display: block;
+}
+
+.hide{
+  display: none;
+}
+
+.header {
+  background: #7a06a4;
+  margin: 0;
+  padding: 1rem;
+  color: white;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  letter-spacing: 0.15em;
+  font-weight: 100;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  left: 0;
+  align-items: center;
+}
+
+.container {
+    
+}
+
+.list-item {
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+}
+
+.list-item > span {
+  width: 15ch;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.list-item > span:last-child {
+  font-weight: bold;
 }
