--- a/src/styles/rightpannel.module.css
+++ b/src/styles/rightpannel.module.css
@@ -1,14 +1,14 @@
-.right{
-    background-color: white;
-    border-radius: 0.5em;
-    box-shadow: 2px 2px 10px #cccccc;
-    padding: 0;
-    margin: 0;
-    overflow-y: scroll;
-    display: block;
+.right {
+  background-color: white;
+  border-radius: 0.5em;
+  box-shadow: 2px 2px 10px #cccccc;
+  padding: 0;
+  margin: 0;
+  overflow-y: scroll;
+  display: block;
 }
 
-.hide{
+.hide {
   display: none;
 }
 
@@ -30,22 +30,111 @@
 }
 
 .container {
-    
 }
 
-.list-item {
+.list-items {
   list-style: none;
   display: flex;
-  gap: 1rem;
+  justify-content: space-around;
+  font-size: 12px;
 }
 
-.list-item > span {
-  width: 15ch;
+.list-item-text {
+  display: flex;
+}
+
+.list-item-text > span {
+  width: 10ch;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.list-item > span:last-child {
+.list-item-text > span:last-child {
   font-weight: bold;
+}
+
+.clear-btn {
+  background: none;
+  color: #777;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 0;
+  font-size: 1.25em;
+}
+
+.clear-btn:hover {
+  color: #7a06a4;
+  transition: all ease 300ms;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.37);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1rem;
+  border-radius: 0.5em;
+  background-color: white;
+  box-shadow: 2px 2px 10px #cccccc;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  width: 300px;
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+}
+
+.modal-header {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-weight: bold;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-remove-btn {
+  border: none;
+  background-color: rgb(241, 50, 50);
+  color: white;
+  padding: 1em;
+  border-radius: 0.5em;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.modal-remove-btn:hover {
+  background-color: rgba(241, 50, 50, 0.582);
+}
+
+.modal-cancel-btn {
+  border: none;
+  background-color: #7a06a4;
+  color: white;
+  padding: 1em;
+  border-radius: 0.5em;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.modal-cancel-btn:hover {
+  background-color: #7a06a485;
+}
+
+.highlight {
+  background: rgba(206, 206, 5, 0.904);
+  color: #7a06a4;
+  font-weight: 600;
 }
